--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Contant me</title>
+  <title>Contant me للتواصل والإستفسار</title>
   <style>
     body { font-family: Arial; text-align: center; padding: 50px; }
     a { display: block; margin: 20px; font-size: 20px; text-decoration: none; color: #0077cc; }
@@ -12,7 +12,7 @@
   <a href="https://www.facebook.com/share/1JegtUnrzu/" target="_blank">Facebook</a>
   <a href="https://www.instagram.com/saied95salem?igsh=ZGVheWYzdG8xdWxp" target="_blank">Instagram</a>
   <a href="https://wa.me/96170026094" target="_blank">WhatsApp</a>
-    <title>خبرة وإتقان</title>
+    <title>Experience and mastery </title>
 </body>
 </html>
 
