--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Contant me للتواصل والإستفسار</title>
+  <title>Contant Me للتواصل والإستفسار</title>
   <style>
     body { font-family: Arial; text-align: center; padding: 50px; }
     a { display: block; margin: 20px; font-size: 20px; text-decoration: none; color: #0077cc; }
