--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Contant Me</title>
+  <title>Contant Me (Experience and mastery)</title>
   <title>Contant Me</title>
   <style>
     body { font-family: Arial; text-align: center; padding: 50px; }
@@ -13,7 +13,6 @@
   <a href="https://www.facebook.com/share/1JegtUnrzu/" target="_blank">Facebook</a>
   <a href="https://www.instagram.com/saied95salem?igsh=ZGVheWYzdG8xdWxp" target="_blank">Instagram</a>
   <a href="https://wa.me/96170026094" target="_blank">WhatsApp</a>
-    <title>Experience and mastery</title>
 </body>
 </html>
 
