--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Contant Me (Experience and mastery)</title>
-  <title>Contant Me</title>
+  <title>EENG. SAIED SALEM</title>
   <style>
     body { font-family: Arial; text-align: center; padding: 50px; }
     a { display: block; margin: 20px; font-size: 20px; text-decoration: none; color: #0077cc; }
   </style>
 </head>
 <body>
-  <h1>Contact me</h1>
+  <h1>SAIED SALEM</h1>
+  <h1>ELECTRIC ENGINEER</h1>
+
+  <h1>FOLLOW ME</h1>
   <a href="https://www.facebook.com/share/1JegtUnrzu/" target="_blank">Facebook</a>
   <a href="https://www.instagram.com/saied95salem?igsh=ZGVheWYzdG8xdWxp" target="_blank">Instagram</a>
+  
+  <h1>Don't hesitate to contact me</h1>
   <a href="https://wa.me/96170026094" target="_blank">WhatsApp</a>
+  <h1>Experience and mastery</h1>
+  
+  <h1>المهندس سعيد سالم</h1>
+  <h1>تصميم وتنفيذ وتركيب مختلف انواع لوحات التحكم الكهربائية (ATS,MDB)</h1>
+  <h1>تركيب وصيانة أنظمة الطاقة الشمسية</h1>
+  <h1>صيانة أعطال كهربائية</h1>
+
+  <h1>خبرة وإتقان</h1>
+  <h1>للتواصل والإستفسار</h1>
+  <a href="https://wa.me/96170026094" target="_blank">WhatsApp</a>
+
 </body>
 </html>
 
