--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   
   <h1>المهندس سعيد سالم</h1>
   <h1> (ATS,MDB)تصميم وتنفيذ وتركيب مختلف أنواع لوحات التحكم الكهربائية</h1>
+  <h1>Automatic Transfer Switches (ATS) </h1>
+  <h1>Main Distribution Boards (MDB) </h1>
+  
   <h1>تركيب وصيانة أنظمة الطاقة الشمسية</h1>
   <h1>صيانة أعطال كهربائية</h1>
 
