--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h1>Experience and mastery</h1>
   
   <h1>المهندس سعيد سالم</h1>
-  <h1> (ATS,MDB)تصميم وتنفيذ وتركيب مختلف أنواع لوحات التحكم الكهربائية</h1>
+    <h1>تصميم وتنفيذ وتركيب مختلف لوحات التحكم الكهربائية</h1>
   <h1>Automatic Transfer Switches (ATS) </h1>
   <h1>Main Distribution Boards (MDB) </h1>
   
