--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   
   <h1>Don't hesitate to contact me</h1>
   <a href="https://wa.me/96181045241" target="_blank">WhatsApp</a>
+ <h1>or</h1>
+  <a href="https://wa.me/96170026094" target="_blank">WhatsApp</a>
   <h1>Experience and mastery</h1>
   
   <h1>المهندس سعيد سالم</h1>
