--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
   <h1>خبرة وإتقان</h1>
   <h1>للتواصل والإستفسار</h1>
   <a href="https://wa.me/96181045241" target="_blank">WhatsApp</a>
-
+ <h1>أو</h1>
+  <a href="https://wa.me/96170026094" target="_blank">WhatsApp</a>
+ <h1>خبرتنا بتحكي عنا 👌</h1>
+ 
 </body>
 </html>
 
